--- a/pages/install.html
+++ b/pages/install.html
@@ -42,19 +42,19 @@
                         <div class="container">
                             <div class="flex">
                                 <ul>
-                                    <li><a href="docs.html">DOCS</a></li>
+                                    <li><a href="#">DOCS</a></li>
                                     <!-- <li>
                                         <a href="https://blog.getform.io/?ref=header" target="_blank">BLOG</a>
                                     </li> -->
                                 </ul>
-                                <a href="index.html" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
+                                <a href="/" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
                                         src="_nuxt/img/095d0b3.svg" alt="getform-logo" class="img-fluid" /></a>
                                 <ul>
                                     <li>
-                                        <a href="index.html">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
-                                        <a href="#" class="signup-link">Install</a>
+                                        <a href="/install" class="signup-link">Install</a>
                                     </li>
                                 </ul>
                             </div>
