--- a/pages/index.html
+++ b/pages/index.html
@@ -42,16 +42,16 @@
                         <div class="container">
                             <div class="flex">
                                 <ul>
-                                    <li><a href="/docs">DOCS</a></li>
+                                    <li><a href="#">DOCS</a></li>
                                     <!-- <li>
                                         <a href="https://blog.getform.io/?ref=header" target="_blank">BLOG</a>
                                     </li> -->
                                 </ul>
-                                <a href="/index" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
+                                <a href="/" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
                                         src="_nuxt/img/095d0b3.svg" alt="getform-logo" class="img-fluid" /></a>
                                 <ul>
                                     <li>
-                                        <a href="#" class="signup-link">Home</a>
+                                        <a href="/" class="signup-link">Home</a>
                                     </li>
                                     <li>
                                         <a href="/install">Install</a>
