--- a/pages/install.html
+++ b/pages/install.html
@@ -122,11 +122,11 @@
         </div>
     </div>
     <script src="js/typing.js" defer></script>
-    <script src="_nuxt/94600c02495bafd880f7.js" defer></script>
+    <!-- <script src="_nuxt/94600c02495bafd880f7.js" defer></script>
     <script src="_nuxt/c4fc3c2aa179ffdf4f84.js" defer></script>
     <script src="_nuxt/2ab9e0c2f0a13f70267b.js" defer></script>
     <script src="_nuxt/7fdb7935fa1b9f7a17b6.js" defer></script>
-    <script src="_nuxt/f0873ff96408f178a48a.js" defer></script>
+    <script src="_nuxt/f0873ff96408f178a48a.js" defer></script> -->
 </body>
 
 </html>
