--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
                                     </li> -->
                                 </ul>
                                 <a href="/" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
-                                        src="_nuxt/img/095d0b3.svg" alt="getform-logo" class="img-fluid" /></a>
+                                        src="_nuxt/img/d.png" alt="getform-logo" class="img-fluid" /></a>
                                 <ul>
                                     <li>
                                         <a href="/" class="signup-link">Home</a>
