--- a/pages/install.html
+++ b/pages/install.html
@@ -48,7 +48,7 @@
                                     </li> -->
                                 </ul>
                                 <a href="/" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
-                                        src="_nuxt/img/095d0b3.svg" alt="getform-logo" class="img-fluid" /></a>
+                                        src="_nuxt/img/d.png" alt="getform-logo" class="img-fluid" /></a>
                                 <ul>
                                     <li>
                                         <a href="/">Home</a>
@@ -62,17 +62,18 @@
                     </div>
 
                 </div>
-                <section class="container layout-960">
-                    <section class="section1">
-                        <article class="container">
-                            <div class="row">
-                                <div class="col-sm-6 left">
-                                    <h1>Installation</h1>
-                                    <p>
-                                        Two easy commands!
+                <div class="something">
+                    <section class="container layout-960">
+                        <section class="section1">
+                            <article class="container">
+                                <div class="row">
+                                    <div class="col-sm-6 left">
+                                        <h1>Installation</h1>
+                                        <p>
+                                            Two easy commands!
 
-                                    </p>
-                                    <!-- <div class="buttons cta-button">
+                                        </p>
+                                        <!-- <div class="buttons cta-button">
                                         <a href="https://github.com/imthaghost/goclone" class="btn-landing">SEE CODE</a>
                                         <a href="https://github.com/imthaghost/goclone/blob/master/docs/media/teslaexample.gif"
                                             target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="8"
@@ -85,39 +86,42 @@
                                         </a>
                                     </div>
                                 </div> -->
-                                    <div class="col-sm-6 right">
-                                        <div class="circle">
-                                            <div class="box action-box">
-                                                <div class="box-window">
-                                                    <i></i> <i></i> <i></i>
+                                        <div class="col-sm-6 right">
+                                            <div class="circle">
+                                                <div class="summ">
+                                                    <div class="box action-box">
+                                                        <div class="box-window">
+                                                            <i></i> <i></i> <i></i>
+                                                        </div>
+                                                        <p>
+                                                            $ brew tap imthaghost/goclone
+                                                        </p>
+                                                        <p>
+                                                            $ brew install goclone
+                                                        </p>
+
+
+
+                                                    </div>
                                                 </div>
-                                                <p>
-                                                    $ brew tap imthaghost/goclone
-                                                </p>
-                                                <p>
-                                                    $ brew install goclone
-                                                </p>
-
-
-
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                        </article>
+                            </article>
 
 
 
 
 
+                        </section>
                     </section>
-                </section>
 
 
 
 
 
 
+                </div>
             </div>
         </div>
     </div>
