--- a/pages/index.html
+++ b/pages/index.html
@@ -110,7 +110,7 @@
                                             </div>
                                             <p>
                                                 $ goclone&nbsp;<span class="txt-rotate" data-period="1000"
-                                                    data-rotate='[ "dribbble.com", "https://tesla.com", "google.com"]'></span>
+                                                    data-rotate='[ "goclone.herokuapp.com", "https://tesla.com", "google.com"]'></span>
                                                 <!-- action=&quot;<span>getform.io/f/1234</span>&quot; method=&quot;POST&quot;&gt; -->
                                             </p>
 
