--- a/pages/index.html
+++ b/pages/index.html
@@ -123,7 +123,7 @@
                                                 /_flysystem/s3/js/js_BTagfAr9RWJ3H6ivtNVx0spYVuGNs_mLT3TexXWpFO8.js
                                                 <br />
                                                 Img found -->
-                                                https://www.tesla.com/ns_videos/homepage/main_hero_homepage_desktop.jpg
+                                                /homepage/main_hero_homepage_desktop.jpg
                                                 <br />
                                                 <!-- &lt;$ type=&quot;text&quot;
                                                 name=&quot;tel&quot;&gt;<br />
