--- a/pages/install.html
+++ b/pages/install.html
@@ -2,30 +2,33 @@
 <html data-n-head-ssr>
 
 <head>
-    <title>Getform | Easy form endpoints for your forms</title>
+    <title>Goclone | Easily Clone Websites</title>
     <meta data-n-head="ssr" charset="utf-8" />
     <meta data-n-head="ssr" name="viewport" content="width=device-width, initial-scale=1" />
-    <meta data-n-head="ssr" data-hid="description" name="description"
-        content="Easy form endpoints to manage for your forms. Simple form backend platform for designers and developers. Generate an endpoint URL, update your HTML form tag and start collecting form submissions." />
+    <meta data-n-head="ssr" data-hid="description" name="description" content="Copy websites to your computer! goclone is a utility that
+            allows you to download a website from the Internet to a local directory.
+            Get html, css, js, images, and other files from the server to your
+            computer. goclone arranges the original site's relative link-structure.
+            Simply open a page of the mirrored website in your browser, and you
+            can browse the site from link to link, as if you were viewing it
+            online." />
     <meta data-n-head="ssr" name="robots" content="index, follow" />
     <meta data-n-head="ssr" name="distribution" content="global" />
     <meta data-n-head="ssr" name="og:type" content="website" />
-    <meta data-n-head="ssr" name="og:title" content="Getform.io | Easy form endpoints for your forms" />
+    <meta data-n-head="ssr" name="og:title" content="Goglone | Easily clone websites" />
     <meta data-n-head="ssr" name="og:url" content="index.html" />
     <meta data-n-head="ssr" name="og:image" content="og-image.png" />
-    <meta data-n-head="ssr" name="og:description"
-        content="Easy form endpoints to manage for your forms. Simple form backend platform for designers and developers. Generate an endpoint URL, update your HTML form tag and start collecting form submissions." />
+    <meta data-n-head="ssr" name="og:description" content="Copy websites to your computer! goclone is a utility that
+                allows you to download a website from the Internet to a local directory.
+                Get html, css, js, images, and other files from the server to your
+                computer. goclone arranges the original site's relative link-structure.
+                Simply open a page of the mirrored website in your browser, and you
+                can browse the site from link to link, as if you were viewing it
+                online." />
     <link data-n-head="ssr" rel="icon" type="image/x-icon" href="logo.png" />
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:400,600,900&amp;amp;subset=latin-ext" />
-    <script data-n-head="ssr" src="https://js.stripe.com/v3"></script>
-    <script data-n-head="ssr" src="http://www.googletagmanager.com/gtm.js?id=GTM-PN7JGSB&amp;l=dataLayer" async>
-    </script>
-    <link rel="preload" href="_nuxt/94600c02495bafd880f7.js" as="script" />
-    <link rel="preload" href="_nuxt/2ab9e0c2f0a13f70267b.js" as="script" />
-    <link rel="preload" href="_nuxt/7fdb7935fa1b9f7a17b6.js" as="script" />
-    <link rel="preload" href="_nuxt/f0873ff96408f178a48a.js" as="script" />
-    <link rel="preload" href="_nuxt/c4fc3c2aa179ffdf4f84.js" as="script" />
+
     <link rel="stylesheet" type="text/css" href="css/theme.css" />
     <link rel="stylesheet" type="text/css" href="css/strap.css" />
     <link rel="stylesheet" type="text/css" href="css/another.css" />
@@ -60,7 +63,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="something">
                     <section class="container layout-960">
@@ -108,11 +110,6 @@
                                         </div>
                                     </div>
                             </article>
-
-
-
-
-
                         </section>
                     </section>
 
@@ -126,11 +123,6 @@
         </div>
     </div>
     <script src="js/typing.js" defer></script>
-    <!-- <script src="_nuxt/94600c02495bafd880f7.js" defer></script>
-    <script src="_nuxt/c4fc3c2aa179ffdf4f84.js" defer></script>
-    <script src="_nuxt/2ab9e0c2f0a13f70267b.js" defer></script>
-    <script src="_nuxt/7fdb7935fa1b9f7a17b6.js" defer></script>
-    <script src="_nuxt/f0873ff96408f178a48a.js" defer></script> -->
 </body>
 
 </html>
