--- a/pages/index.html
+++ b/pages/index.html
@@ -43,13 +43,13 @@
                         <div class="container">
                             <div class="flex">
                                 <ul>
-                                    <li><a href="#">DOCS</a></li>
+                                    <li><a href="/docs">Docs</a></li>
                                     <!-- <li>
                                         <a href="https://blog.getform.io/?ref=header" target="_blank">BLOG</a>
                                     </li> -->
                                 </ul>
                                 <a href="/" class="navbar-brand nuxt-link-exact-active nuxt-link-active"><img
-                                        src="_nuxt/img/d.png" alt="getform-logo" class="img-fluid" /></a>
+                                        src="_nuxt/img/d.png" class="img-fluid" /></a>
                                 <ul>
                                     <li>
                                         <a href="/" class="signup-link">Home</a>
