--- a/pages/install.html
+++ b/pages/install.html
@@ -45,7 +45,7 @@
                         <div class="container">
                             <div class="flex">
                                 <ul>
-                                    <li><a href="#">DOCS</a></li>
+                                    <li><a href="/docs">Docs</a></li>
                                     <!-- <li>
                                         <a href="https://blog.getform.io/?ref=header" target="_blank">BLOG</a>
                                     </li> -->
