--- a/pages/index.html
+++ b/pages/index.html
@@ -92,7 +92,7 @@
                                     </p>
                                     <div class="buttons cta-button">
                                         <a href="https://github.com/imthaghost/goclone" class="btn-landing">SEE CODE</a>
-                                        <a href="https://github.com/imthaghost/goclone/blob/master/docs/media/teslaexample.gif"
+                                        <a href="https://github.com/imthaghost/goclone/blob/master/docs/media/fast.gif"
                                             target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="8"
                                                 height="10" viewBox="0 0 8 10">
                                                 <path fill="#2A2D33" fill-rule="nonzero"
@@ -111,7 +111,7 @@
                                             </div>
                                             <p>
                                                 $ goclone&nbsp;<span class="txt-rotate" data-period="1000"
-                                                    data-rotate='[ "goclone.app.imthaghost.dev", "https://tesla.com", "google.com"]'></span>
+                                                    data-rotate='[ "goclone.imthaghost.dev", "https://tesla.com", "google.com"]'></span>
                                                 <!-- action=&quot;<span>getform.io/f/1234</span>&quot; method=&quot;POST&quot;&gt; -->
                                             </p>
 
